--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,7 +7,7 @@ services:
         PHP_VERSION: ${PHP_VERSION}
     platform: linux/amd64
     volumes:
-      - ocstore_data:/web/storage
+      - ./ocstore:/web
     ports:
       - "8010:80"
     restart: unless-stopped
@@ -38,4 +38,3 @@ services:
 
 volumes:
   mysql_data:
-  ocstore_data:
